--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,63 @@
 /* Base styles */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
-    color: #333;
+  text-decoration: none;
+  color: #333;
 }
 
 .loader {
-    width: 100%;
-    height: 5px;
-    background-color: #ddd;
-  }
-  
-  .loader-progress {
-    width: 0;
-    height: 100%;
-    background-color: #ff0000; /* Adjust the color as needed */
-    animation: loadingAnimation 2s ease-in-out forwards;
-  }
-  
-  @keyframes loadingAnimation {
-    0% {
-      width: 0;
-    }
-    100% {
-      width: 100%;
-    }
-  }
-  
+  width: 100%;
+  height: 5px;
+  background-color: #ddd;
+}
 
-  
+.loader-progress {
+  width: 0;
+  height: 100%;
+  background-color: #ff0000;
+  /* Adjust the color as needed */
+  animation: loadingAnimation 2s ease-in-out forwards;
+}
+
+@keyframes loadingAnimation {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
+
+/* Common styles for all devices */
+
+/* Add your common styles here */
+
+/* Styles for mobile devices */
+@media (max-width: 767px) {
+  /* Add styles specific to mobile devices here */
+
+  /* Adjust font sizes */
+  body {
+    font-size: 14px;
+  }
+
+  /* Modify other styles as needed */
+}
+
+/* Styles for tablets and larger devices */
+@media (min-width: 768px) {
+  /* Add styles specific to tablets and larger devices here */
+
+  /* Adjust font sizes */
+  body {
+    font-size: 16px;
+  }
+
+  /* Modify other styles as needed */
+}
