--- a/css/education.css
+++ b/css/education.css
@@ -43,3 +43,50 @@
   margin: 0;
   color: #555 !important; /* Adjust the color as needed */
 }
+
+.education .project-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.education .project-item {
+  flex-basis: calc(33.33% - 30px);
+  margin: 15px;
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.education .project-item:hover {
+  transform: translateY(-5px);
+}
+
+.education .project-item h3 {
+  font-size: 24px;
+  margin-top: 0;
+}
+
+.education .project-item p {
+  text-align: left;
+  margin: 10px 0;
+}
+
+.education .project-item a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.education .project-item a:hover {
+  background-color: #ff0000;
+}
