--- a/css/port.css
+++ b/css/port.css
@@ -26,7 +26,7 @@
 }
 
 .project-item {
-  flex-basis: calc(33.33% - 30px);
+  flex-basis: 100%;
   margin: 15px;
   padding: 30px;
   background-color: #fff;
